--- a/config/initializers/cmt_config.example
+++ b/config/initializers/cmt_config.example
@@ -87,7 +87,7 @@ module Cmt
     :web_links_tab_enabled => true,
     
     # When enabled, a dashboard widget will appear showing recently visited web links
-    :web_links_dashboard_widget_enabled => true
+    :web_links_dashboard_widget_enabled => true,
 
     # allow impersonating someone - don't turn this on unless you're in a dev environment
     :allow_impersonate => false
